# DirectMultiStep

./: .coveragerc  .gitignore  .pre-commit-config.yaml  404.html  BATCHED_BEAM_SEARCH.md  CNAME  IMPLEMENTATION_SUMMARY.md  LICENSE  README.md  assess_single.py  b-1-routes.txt  codecov.yml  download_ckpts.sh  download_files.sh  helpers.py  index.html  mkdocs.yml  objects.inv  pharma_compounds.json  pyproject.toml  route_separation.json  train_nosm.py  train_wsm.py  visualize_tree.py
.github/: release-drafter.yml
.github/workflows/: linting.yml  main.yml  publish-release.yml  quality.yml  release-drafter.yml  ruff.yml  testing.yml  update-major-minor-tags.yml  version-bump.yml
Data/: README.md  download.py  process.py
Data/Processed/: character_dictionary.yaml
DirectMultiStep/: helpers.py  requirements.txt  train_nosm.py  train_wsm.py
DirectMultiStep/Models/: Architecture.py  Configure.py  Generation.py  TensorGen.py  Training.py
DirectMultiStep/Utils/: Dataset.py  PostProcess.py  PreProcess.py  Visualize.py
DirectMultiStep/components/attention/: index.html
DirectMultiStep/components/decoder/: index.html
DirectMultiStep/components/encoder/: index.html
DirectMultiStep/components/moe/: index.html
DirectMultiStep/evaluation/: index.html
DirectMultiStep/model-init/: index.html
DirectMultiStep/tests/: test_data.py  test_preprocess.py
DirectMultiStep/training/: index.html
DirectMultiStep/utils/io/: index.html
DirectMultiStep/utils/post-process/: index.html
DirectMultiStep/utils/pre-process/: index.html
DirectMultiStep/utils/torch-dataset/: index.html
DirectMultiStep/visualizations/: index.html
Models/: Architecture.py  Configure.py  Generation.py  Training.py
Tutorials/: Basic_Usage.ipynb  Pharma_Compounds.ipynb  Route_Separation.ipynb
Utils/: test_preprocess.py
analysis/monitoring-training/: index.html
analysis/paper-figures/: index.html
analysis/style-settings/: index.html
data/: README.md  download.py  pharma_compounds.json  process.py  process_eMolecules.py
dev/logging/: index.html
docs/: batched-generation.md  index.md  logging.md
docs/DirectMultiStep/: evaluation.md  model-init.md  training.md  visualizations.md
docs/DirectMultiStep/components/: attention.md  decoder.md  encoder.md  moe.md
docs/DirectMultiStep/utils/: io.md  post-process.md  pre-process.md  torch-dataset.md
docs/analysis/: monitoring-training.md  paper-figures.md  style-settings.md
docs/stylesheets/: extra.css
examples/: batched_generation_example.py
logging/: index.html
scripts/: demo_test_data_usage.py  run-beam.py  save-data-for-tests.py  solve_compounds.py  solve_job.sub  solve_submit.sh
scripts/dev/: run-beam.py
search/: search_index.json
src/directmultistep/: __init__.py  generate.py  helpers.py
src/directmultistep/analysis/: style.py  training.py
tests/: test_data.py  test_preprocess.py
tests/generation/: conftest.py  test_batched_beam_search.py  test_batched_beam_search_summary.md  test_beam_search.py
use-examples/: eval-subset.py  generate-route.py  paper-figures.py  train-model.py  visualize-train-curves.py
(+33 files in other folders)
